[project]
name = "yuhport"
version = "0.1.0"
description = "An extensive parser for Yuh CSV data exports"
authors = [
    {name = "Adrien Gresse",email = "adrien.gresse@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
